# tetris_bot

./: .gitignore  CMakeLists.txt  README  build.sh
include/: Board.h  Constants.h  Game.h  Helpers.h  LoadBalancer.h  Tetrimino.h
src/: Board.cpp  Game.cpp  Helpers.cpp  Tetrimino.cpp  main.cpp
tetriminos/L/: 1.txt  2.txt  3.txt  4.txt
tetriminos/N/: 1.txt  2.txt
tetriminos/RL/: 1.txt  3.txt  4.txt
tetriminos/RN/: 1.txt  2.txt
tetriminos/T/: 1.txt  2.txt  3.txt  4.txt
